--- a/atividade1.1/index.html
+++ b/atividade1.1/index.html
@@ -40,12 +40,12 @@
 
                 <br><br>
 
-            <label for="iptY">PosX:</label>
+            <label for="iptY">PosY:</label>
                 <input type="number" id="iptY">
 
            <br><br>
 
-          <button type="button" onclick="somar()">Eixo</button>
+          <button type="button" onclick="eixo()">Eixo</button>
 
           </div>
 
@@ -53,7 +53,7 @@
 
         <div id="Linha2">
 
-          <div class="bloc3">
+          <div id="bloc3">
             <span id="res">Resultado</span>
           </div>
 
